--- a/Restaraunt_Webpage.html
+++ b/Restaraunt_Webpage.html
@@ -1,12 +1,118 @@
 <!DOCTYPE html>
 <!-- Jayden Wigley
-Restaraunt Webpage
-1/26/22
--->
+Restaraunt Website
+1/28/22 -->
 <html>
 <head>
-    <title>Smashburger Mock Website</title>
-    <link rel="icon" type="image/x-icon" href="smashburger.png">
-    <link rel="stylesheet" href="styles.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+
+body {
+  margin: 0;
+  background-color: black;
+  font-family: "Arial", 'Times New Roman', Times, serif;
+  color: white;
+}
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+ 
+.sidebar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: black;
+  color: white;
+}
+
+div.Home {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 500px;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  
+  .sidebar a {
+    float: left;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+
+.parallax {
+  background-image: url("restaraunt.jpg");
+  min-height: 400px; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bottom {
+  background-image: url("burger.jpg");
+  min-height: 350px; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h3{
+  padding-top: 150px;
+}
+</style>
 </head>
+<body>
+<div class="sidebar">
+  <a class="active" href="#home">Home</a>
+  <a href="#menu">Menu</a>
+  <a href="#work">Work</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+<div class="parallax"></div>
+
+<div class="Home">
+  <h2>Smash Burger</h2>
+  <p>Smashburger IP Holder LLC, doing business as Smashburger, is an American fast-casual hamburger restaurant chain founded in Denver, Colorado. As of February 2018, it has more than 370 corporate and franchise-owned restaurants in 37 states and 9 countries. Discover fresh, homemade burgers, sides, milkshakes & more at our restaurants. Order takeout or delivery!</p>
+  <p>"Every bite, a better burger!"</p>
+  <a href="https://smashburger.com/menu/"><u>Menu</u></a>
+  <p>Pick from our long lasting selection of Courses, Sides, Drinks, including many different options for a diet and allergies. Modify your burger to your heart's content, no limit! Includes a secret menu as well with different items on it!</p>
+  <a href="https://smashburger.com/careers/"><u>Work</u></a>
+  <p>Join the Smashburger family and start down a path of growth, success, and commitment to the best burger experience in the business!</p>
+  <a href="https://smashburger.com/careers/"><u>Contact</u></a>
+  <p>Have questions, suggestions or concerns? We’re here for you.</p>
+  <a id="#about" href="https://smashburger.com/about/"><u>About</u></a>
+</div>
+<div class="bottom"></div>
+
+</body>
 </html>
